--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,9 +38,11 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.onboarding"
         minSdkVersion flutter.minSdkVersion
+        // minSdkVersion 19 
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
