--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   
   cloud_firestore: ^3.1.12
 
-  # firebase_auth_oauth: ^1.2.0
+  flutter_quill: ^4.1.9
 
   image_picker: ^0.8.5
 
